Fixed overflowing bug on newer Chrome ver

--- a/dev/scss/sections/_home.scss
+++ b/dev/scss/sections/_home.scss
@@ -23,7 +23,8 @@
 .full {
   display: block;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .fixedCoverWrapper {
