--- a/dev/scss/sections/_project.scss
+++ b/dev/scss/sections/_project.scss
@@ -13,11 +13,14 @@ p, h4{
 }
 .projectCoverFull {
   position: relative;
+  // overflow: hidden;
 
   > picture {
     border: 0;
     position: sticky;
     top: 0;
+    width: 100%;
+    max-width: 100vw;
   }
 }
 
